src/skylink/skylink.h

/*
 * Number of virtual channels.
 * Can be modified for specific mission but the number must be from 1 to 4.
 */
#define SKY_NUM_VIRTUAL_CHANNELS            (4)
typedef uint8_t sky_arq_sequence_t;
typedef uint16_t sky_arq_sequence_t;
// Declare all structs so that we can start creating pointers
typedef struct sky_all *SkyHandle;
typedef struct sky_mac_s SkyMAC;
typedef struct sky_hmac SkyHMAC;
typedef struct sky_conf SkyConfig;
typedef struct sky_virtual_channel_s SkyVirtualChannel;
typedef struct sky_diag SkyDiagnostics;
typedef struct sky_radio_frame SkyRadioFrame;
typedef struct sky_element_buffer_s SkyElementBuffer;
typedef struct sky_send_ring_s SkySendRing;
typedef struct sky_rcv_ring_s SkyRcvRing;
 SkyVCState;
 SkyState;
/* Struct to store pointers to all the data structures related to a protocol instance. */
struct sky_all {
	SkyConfig*          conf;                 // Configuration
	SkyDiagnostics*	    diag;                 // Diagnostics
	SkyVirtualChannel*  virtual_channels[SKY_NUM_VIRTUAL_CHANNELS]; // ARQ capable buffers
	SkyMAC*             mac;                  // MAC state
	SkyHMAC*            hmac;                 // HMAC authentication state
};
//============ FUNCTIONS ===============================================================================================
//======================================================================================================================

/*
 * Create new Skylink protocol instance based on the configuration struct.
 *
 * Args:
 *    config: Pointer to Skylink configuration struct.
 *            The config struct is not copied and it must outlive the instance created.
 */
SkyHandle sky_create(SkyConfig* config);
/*
 * Destroy Skylink instance and free all of its memory.
 *
 * Args:
 *    self: Pointer to Skylink instance to be destroyed.
 */
void sky_destroy(SkyHandle self);
/*
 * Get skylink protocol state
 *
 * Args:
 *    self: Pointer to Skylink instance
 *    state: Pointer to Skylink state object were current protocol state will be stored.
 */
void sky_get_state(SkyHandle self, SkyState* state);
/*
 * Generate a new frame to be sent. The frame won't have any FEC or Golay included yet.
 *
 * Args:
 *    self: Pointer to Skylink instance
 *    frame: Pointer to Skylink Radio Frame struct to which the new frame will be created.
 *
 * Returns:
 *    <0 if there was an error.
 *    0 if there's nothing to be sent.
 *    1 if there's something to be sent and the frame was written to given structure.
 */
int sky_tx(SkyHandle self, SkyRadioFrame *frame);
/*
 * Generate a new frame to be sent.
 * The frame will have the FEC and Golay header included.
 *
 * Args:
 *    self: Pointer to Skylink instance
 *    frame: Pointer to Skylink Radio Frame struct to which the new frame will be created.
 *
 * Returns:
 *    <0 if there was an error.
 *    0 if there's nothing to be sent.
 *    1 if there's something to be sent and the frame was written to given structure.
 */
int sky_tx_with_golay(SkyHandle self, SkyRadioFrame *frame);
/*
 * Pass received frame for the protocol logic.
 * The frame doesn't have FEC or Golay included.
 *
 * Args:
 *    self: Skylink handle
 *    frame: Received radio frame
 * Returns:
 *    <0 if there was an error.
 *    0 if there was no error while processing the frame.
 */
int sky_rx(SkyHandle self, const SkyRadioFrame *frame);
/*
 * Pass received frame for the protocol logic.
 * The frame will have the FEC and Golay header included.
 *
 * Args:
 *    self: Skylink handle
 *    frame: Received radio frame
 * Returns:
 *    <0 if there was an error.
 *    0 if there was no error while processing the frame.
 */
int sky_rx_with_golay(SkyHandle self, SkyRadioFrame *frame);
/*
 * Start the ARQ process connecting procedure
 *
 * Args:
 *    vchannel: Pointer to virtual channel
 */
int sky_vc_arq_connect(SkyVirtualChannel *vchannel);
/*
 * Disconnect/flush ARQ process
 *
 * Args:
 *    vchannel: Pointer to virtual channel
 */
int sky_vc_arq_disconnect(SkyVirtualChannel *vchannel);