src/skylink/hmac.h

#define SKY_MAX_HMAC_KEY_COUNT			(4)
typedef struct {
	uint8_t key[BLAKE3_KEY_LEN];
	unsigned int len;
} SkyHMACKey;
/* Per virtual channel HMAC state */
typedef struct
{
	/* Flag to indicate need to transmit HMAC reset extension */
	uint8_t send_sequence_reset;

	/* Current transmitting sequence number */
	int32_t sequence_tx;

	/* Current receiving sequence number */
	int32_t sequence_rx;
} SkyHMACVChannel;
/* Set HMAC keys */
void sky_hmac_set_keys(SkyHandle self, const SkyHMACKey *keys, unsigned int count);